--- a/examples/standard/deployment.yaml
+++ b/examples/standard/deployment.yaml
@@ -18,6 +18,11 @@ spec:
         app.kubernetes.io/component: exporter
         app.kubernetes.io/name: kube-state-metrics
         app.kubernetes.io/version: 2.4.2
+      annotations:
+        # Annotations so this pod is scrapped by the scalyr agent
+        prometheus.io/port: '8080'
+        k8s.monitor.config.scalyr.com/scrape: "true"
+        k8s.monitor.config.scalyr.com/scrape_interval: "60"
     spec:
       automountServiceAccountToken: true
       containers:
