Add example kustomize patch file for applying scalyr agent metrics scraping definitions to the main pod.

--- a/kustomization.yaml
+++ b/kustomization.yaml
@@ -6,3 +6,5 @@ resources:
 - examples/standard/deployment.yaml
 - examples/standard/service-account.yaml
 - examples/standard/service.yaml
+patchesStrategicMerge:
+- examples/standard/patches/scalyr-agent-pod-annotations.yaml
